# ohtu-2022-all

./: MERGE.MD  PULL.MD  README.md  retro.md
viikko1/nhl-statistics-1/: pyproject.toml
viikko1/nhl-statistics-1/src/: index.py  statistics.py
viikko1/nhl-statistics-1/src/tests/: statistics_test.py
viikko2/poetry-web/: pyproject.toml
viikko2/poetry-web/src/: project_reader.py
viikko3/login-robot/src/tests/: login.robot  register.robot  resource.robot
viikko3/nhl-reader/src/: PlayerReader.py  PlayerStats.py  index.py  player.py
viikko3/web-login-robot/src/: AppLibrary.py
viikko3/web-login-robot/src/tests/: home.robot  login.robot  register.robot  resource.robot
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/src/: kauppa.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/: RETRO.md
viikko5/laskin/src/: kayttoliittyma.py  sovelluslogiikka.py
viikko6/query-language/src/: index.py  matchers.py
