[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = "poetryweb"
authors = ["Harri Nieminen <nieminen.harri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
tomli = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
